<resources>
    <string name="ask_permission_title">GPS Permission</string>
    <string name="ask_permission_messege">please enable your GPS to get your Location on Map</string>
    <string name="ask_permission_positive">Enable</string>
    <string name="ask_permission_negative">Cancel</string>
    <string name="app_name">Rent or Sale</string>
    <string name="title_activity_maps">Map</string>
    <string name="SearchForAnApartment_Menu">Search For new Advertisements</string>
    <string name="SearchForAnApartmentHint_Menu">Either you wana Buy Or Rent An Apartment , chalet , hall , land , store</string>
    <string name="profile_menu">Your Profile</string>
    <string name="CreateEventHint_Menu">See your profile so you can change your information</string>
    <string name="noOfPaths">paths</string>
    <string name="apartment_location_english">Submit</string>
    <string name="apartment_area_english">- Area :</string>
    <string name="area_hint">Put area here ..</string>
    <string name="bedrooms_hint">Number of bedrooms ..</string>
    <string name="noOfBathrooms">- Number of Bathrooms</string>
    <string name="bathrooms_hint">Number of bathrooms ..</string>
    <string name="pets">- Pets allowed </string>
    <string name="cat">Cat</string>
    <string name="bDog">Big Dogs</string>
    <string name="sDog">Small Dogs</string>
    <string name="others">Others</string>
    <string name="Parking">- Parking Lots</string>
    <string name="livingRoom">- Living room</string>
    <string name="kitchen">- Kitchen</string>
    <string name="coolingSystem">- Cooling System</string>
    <string name="negotiablePrice">- Negotiable Price</string>
    <string name="priceText">- Price :</string>
    <string name="price">Price</string>
    <string name="noOfBedrooms">- Number of Bedrooms :</string>
    <string name="drawer_item_home">Item Number One</string>
    <string name="drawer_item_settings">Item Number 2</string>
    <string name="setYourAdvertisement">Set Your Advertisement</string>
    <string name="SetTheApartmentLocation_hint">Get the location of your place and set up your advertisement</string>
    <string name="title_activity_places_auto_location">Map</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="registerLogin_btn"><![CDATA[Register & Login]]></string>
    <string name="iamIn">i am in the location</string>
    <string name="iamOut">this\'s not my estate location</string>
    <string name="show_password">show password</string>
    <string name="forgetPassword">forget password</string>
    <string name="rent">Rent</string>
    <string name="sale">Sale</string>
    <string name="facebook_app_id">487725684953514</string>
    <string name="fb_login_protocol_scheme">fb487725684953514</string>
    <string name="enterAddress">Enter Address Here Please ..</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="favourites">* Favourites :</string>
    <string name="myAdv">* My Advertisements :</string>
    <string name="editProfile">Edit Profile</string>
    <string name="saveChangesBtn">Save Changes</string>
    <string name="NameProfile">* Name :</string>
    <string name="editNameHint">enter your name here ..</string>
    <string name="emailProfile">* Email :</string>
    <string name="AddressProfile">* Address :</string>
    <string name="editAddressHint">enter your Address here ..</string>
    <string name="contactNumProfile">* Contact Number :</string>
    <string name="contactNumEditHint">enter your contact number here ..</string>
    <string name="AddressText">Address here</string>
    <string name="contactText">Mobile number here</string>
    <string name="profileTitle">Your Profile</string>
    <string name="genderProfile">* Gender :</string>
    <string name="GenderText">Gender here</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confPassHint">Confirm Password</string>
    <string name="phoneNumHint">phone number</string>
    <string name="BirthdayProfile">* Birthday :</string>
    <string name="BirthdayText">Birthday here</string>
    <string name="noName">No name found</string>
    <string name="noEmail">No email found here</string>
    <string name="editBirthHint">mm/dd/yy</string>
    <string name="BirthProfile">* Birthday :</string>
    <string name="editEmailHint">enter your email here ..</string>
    <string name="changePhoto">Change Picture</string>
    <string name="farm">Farm</string>
    <string name="build">For build</string>
    <string name="description">Type a description ..</string>
    <string name="noOfSeats">- Seats :</string>
    <string name="seat">Number of seats</string>
    <string name="buffet">- Buffet</string>
    <string name="to"><![CDATA[<=TO=>]]></string>
    <string name="galary">Galary</string>
    <string name="searchHint">Enter your address here</string>
    <string name="submit">Submit</string>
    <string name="category">- Category :</string>
    <string name="userComment">User Comment IF Founded ..</string>
    <string name="available">* Available Features :</string>
    <string name="phoneNumber">- Phone Number :</string>
    <string name="pleaseWait">Please wait ...</string>
    <string name="category2">* Category *</string>
    <string name="priceText2">* Price *</string>
    <string name="apartment_area_english2">* Area *</string>
    <string name="searchType">* Search Type *</string>
    <string name="required">required !</string>
    <string name="area">area ..</string>
    <string name="priceCard">* Price :</string>
    <string name="priceHere">price ..</string>
    <string name="addressHere">address here</string>
    <string name="noAds">you haven\'t set any advertise yet ..</string>
    <string name="noFav">No favourites yet</string>
    <string name="remove">Remove</string>
    <string name="removeMsg">Do you want to remove this advertisement ?!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="areaCard">* Area :</string>
    <string name="call">Call</string>
    <string name="type">- Place is For :</string>
    <string name="RentOrSale">Rent / Sale</string>
    <string name="landT">- Land Type :</string>


</resources>
