<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.profile.activities.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/profile_pic_bg"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:id="@+id/header"
                android:weightSum="1">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/editProfile"
                    android:textSize="22dp"
                    android:layout_marginTop="13dp"
                    />


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/edit_profile_image"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="20dp"
                    app:civ_border_width="2dp"
                    android:src="@mipmap/profileuser"
                    app:civ_border_color="#FF000000"/>

                <Button
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:onClick="ChangeProfilePic"
                    android:text="@string/changePhoto"
                    android:textSize="13sp"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_design"
                    />


                <Button
                    android:id="@+id/save_profile_btn"
                    android:paddingStart="130dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:background="#65a8ae"
                    android:drawableStart="@mipmap/save1"
                    android:paddingEnd="120dp"
                    android:text="@string/saveChangesBtn"


                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:orientation="vertical"
                android:paddingLeft="15dp"

                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NameProfile"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:inputType="text"
                    android:gravity="center"
                    android:id="@+id/edit_profile_name"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:hint="@string/editNameHint"
                    android:textColor="@android:color/black"
                    android:textColorHint="#c0c0c0"
                    android:background="@drawable/edit_text_profile"
                    android:textSize="18sp" />


                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailProfile"
                    android:textColor="@android:color/black" />

                <EditText
                    android:id="@+id/edit_profile_email"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edit_text_profile"
                    android:gravity="center"
                    android:hint="@string/editEmailHint"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textColorHint="#c0c0c0"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/genderProfile"
                    android:textColor="@android:color/black" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/genderSpinner"
                    android:layout_gravity="center"

                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/AddressProfile"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:inputType="text"
                    android:id="@+id/edit_profile_address"
                    android:gravity="center"
                    android:background="@drawable/edit_text_profile"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:hint="@string/editAddressHint"
                    android:textColor="@android:color/black"
                    android:textColorHint="#c0c0c0"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/BirthProfile"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:inputType="text"
                    android:id="@+id/edit_profile_birthday"
                    android:gravity="center"
                    android:background="@drawable/edit_text_profile"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:hint="@string/editBirthHint"
                    android:textColor="@android:color/black"
                    android:textColorHint="#c0c0c0"
                    android:textSize="18sp" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/contactNumProfile"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:inputType="text"
                    android:background="@drawable/edit_text_profile"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:hint="@string/contactNumEditHint"
                    android:textColor="@android:color/black"
                    android:textColorHint="#c0c0c0"
                    android:id="@+id/edit_profile_contactNumber"
                    android:textSize="18sp" />






                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:orientation="vertical"
                    />

            </LinearLayout>

        </LinearLayout>












    </ScrollView>



</LinearLayout>
