<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chalet_bg"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="50dp"
    >


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/submitingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/camImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@mipmap/beachhouse" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button

                    android:id="@+id/chaletForRentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/btn_design"
                    android:text="@string/rent"
                    android:textAllCaps="false"/>

                <Button

                    android:id="@+id/chaletForSaleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/btn_design"
                    android:text="@string/sale"
                    android:textAllCaps="false"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/priceText"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/chaletPrice"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColorHint="#3f6468"
                    android:textColor="@android:color/black"
                    android:ellipsize="end"
                    android:hint="@string/price"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:scrollHorizontally="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/phoneNumber"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"

                    />


                <EditText
                    android:id="@+id/phoneChalet"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:hint="@string/phoneNumHint"
                    android:textColorHint="#3f6468"
                    android:textColor="@android:color/black"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:scrollHorizontally="true" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/apartment_area_english"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <EditText
                    android:id="@+id/chaletArea"
                    android:layout_width="250dp"
                    android:textColorHint="#3f6468"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:hint="@string/area_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:scrollHorizontally="true" />

                <Spinner
                    android:id="@+id/chaletSpinner"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="30dp">

                </Spinner>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/noOfBedrooms"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <EditText
                    android:id="@+id/chaletBedrooms"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColorHint="#3f6468"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:hint="@string/bedrooms_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:scrollHorizontally="true" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/noOfBathrooms"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="italic"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Switch
                    android:id="@+id/petSwitch"
                    android:layout_width="match_parent"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/pets"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp">

                <EditText
                    android:id="@+id/chaletBathrooms"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:textColorHint="#3f6468"
                    android:textColor="@android:color/black"
                    android:hint="@string/bathrooms_hint"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:scrollHorizontally="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/switchOn_pets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <CheckBox
                        android:id="@+id/chaletSmallDogs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:text="@string/sDog" />

                    <CheckBox
                        android:id="@+id/chaletBigDogs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_alignParentEnd   ="true"
                        android:layout_marginEnd="50dp"
                        android:text="@string/bDog" />

                    <CheckBox
                        android:id="@+id/chaletCats"
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/chaletBigDogs"
                        android:layout_marginStart="40dp"
                        android:text="@string/cat" />

                    <CheckBox
                        android:id="@+id/chaletOthers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:layout_alignParentEnd   ="true"
                        android:layout_below="@id/chaletSmallDogs"
                        android:layout_marginEnd="62dp"
                        android:text="@string/others" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Switch
                    android:id="@+id/chaletParkingSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd    ="30dp"
                    android:text="@string/Parking"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Switch
                    android:id="@+id/chaletLivingRoomSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@android:color/black"
                    android:text="@string/livingRoom"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Switch
                    android:id="@+id/chaletKitchenSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="30dp"
                    android:text="@string/kitchen"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Switch
                    android:id="@+id/chaletCoolingSystemSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/black"
                    android:layout_marginEnd="30dp"
                    android:text="@string/coolingSystem"
                    android:textSize="18sp"
                    android:textStyle="italic" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Switch
                    android:id="@+id/chaletNegotiablePriceSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:textColor="@android:color/black"
                    android:text="@string/negotiablePrice"
                    android:textSize="18sp"
                    android:textStyle="italic" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <EditText
                    android:id="@+id/chaletDescription"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:hint="@string/description"
                    android:textColorHint="#3f6468"
                    android:textColor="@android:color/black"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:scrollHorizontally="true" />

            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        android:id="@+id/galary"
                        android:background="@drawable/btn_design"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClickChalet"
                        android:textAllCaps="false"
                        android:text="@string/galary" />


                </LinearLayout>

                <com.daimajia.slider.library.SliderLayout
                    android:id="@+id/chaletSlider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/chaletSubmit"
                    android:background="@drawable/btn_design"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/apartment_location_english"
                    android:textAllCaps="false"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/chaletCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/cancel"
                    android:background="@drawable/btn_design"
                    android:layout_marginStart="65dp"
                    android:textAllCaps="false"
                    android:textSize="19sp"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</LinearLayout>